k8s/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: koriakin
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30007
